--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 a {
@@ -13,4 +12,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.mycontainer {
+	max-width: 1280px;
+	margin: auto
+}
+.menus{
+  text-transform: uppercase;
+  font-family: Poppins;
+  font-size: small;
 }
