--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,7 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Roboto, sans-serif;
+  font-family: Poppins, sans-serif !important;
+  background-color: #F6F4F2;
 }
 
 a {
@@ -18,8 +19,14 @@ a {
 	max-width: 1280px;
 	margin: auto
 }
+
+.content {
+	max-width: 1024px;
+	margin: auto
+}
 .menus{
   text-transform: uppercase;
   font-family: Poppins;
   font-size: small;
 }
+
